<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="grauDecimal_txt">Grau Decimal</string>
    <string name="geoCoord_txt">Formato de apresentação das coordenadas geográficas:</string>
    <string name="trafficInfo_txt">Informações de tráfego:</string>
    <string name="mapOrientation_txt">Orientação do Mapa:</string>
    <string name="on_txt">Ligado</string>
    <string name="off_txt">Desligado</string>
    <string name="mapType_txt">Tipo do Mapa:</string>
    <string name="speedUnit_txt">Unidade de apresentação da velocidade:</string>
    <string name="kmh_txt">Km/h (quilometro por hora)</string>
    <string name="mph_txt">Mph (milhas por hora)</string>
    <string name="none_txt">Nenhuma(O usuário pode escolher manualmente a orientação do mapa)</string>
    <string name="northUp_txt">North Up (Norte do mapa alinhado com o topo do dispositivo)</string>
    <string name="courseUp_txt">CourseUp (Topo do mapa alinhado com a direção do deslocamento (rumo-bearing)"</string>
    <string name="vetorial_txt">Vetorial</string>
    <string name="satImg_txt">Imagem de Satélite</string>
    <string name="about_txt">Sobre Nós</string>
    <string name="config_txt">Configuração</string>
    <string name="degree_minute_txt">Grau-Minuto decimal</string>
    <string name="degree_minute_sec_txt">Grau-Minuto-Segundo decimal</string>
    <string name="app_name">PinOnMe</string>
    <string name="buttonConfig_txt">Configuração</string>
    <string name="buttonNavegacao_txt">Navegação</string>
    <string name="buttonHistorico_txt" tools:ignore="DuplicateDefinition" translatable="false">Histórico</string>
    <string name="buttonGNSS_txt">GNSS</string>
    <string name="buttonSobre_txt">Sobre</string>
    <string name="sobreAplicacao_txt">Essa aplicação pode ser usada para ver um mapa com a localização em tempo real do usuário, com informações à respeito das coordenadas geográficas, velocidade, direção e muito mais!</string>
    <string name="tituloDesenvolvedores_txt">Desenvolvedores:</string>
    <string name="nomeDesenvolvedores_txt">Alex de Souza, Lucas de Mello, Lucas Paiva, Thiago Santos, Vitor Barretto</string>
    <string name="tituloVersao_txt">v2.0 </string>
    <string name="title_activity_maps" translatable="false">MapsActivity</string>
    <string name="longitude" translatable="false">Longitude:</string>
    <string name="latitude" translatable="false">Latitude:</string>
    <string name="velocidade" translatable="false">Velocidade:</string>
    <string name="longitudeGnss" translatable="false">Longitude:</string>
    <string name="latitudeGnss" translatable="false">Latitude:</string>
    <string name="velocidadeGnss" translatable="false">Velocidade:</string>
    <string name="bearingGnss" translatable="false">Bearing:</string>
    <string name="txtTituloLog" translatable="false">Histórico de Localizações:</string>
</resources>