<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/blue_background"
    tools:context=".SobreActivity">

    <TextView
        android:id="@+id/textAppDescription"
        android:layout_width="402dp"
        android:layout_height="185dp"
        android:layout_marginTop="24dp"
        android:lineHeight="25dp"
        android:lineSpacingExtra="2.45sp"
        android:text="@string/sobreAplicacao_txt"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.321"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textDevNames"
        android:layout_width="386dp"
        android:layout_height="89dp"
        android:text="@string/nomeDesenvolvedores_txt"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.64"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.883" />

    <TextView
        android:id="@+id/textDev"
        android:layout_width="245dp"
        android:layout_height="32dp"
        android:text="@string/tituloDesenvolvedores_txt"
        android:textColor="@color/white"
        android:textSize="25dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.74" />

    <TextView
        android:id="@+id/textVersion"
        android:layout_width="113dp"
        android:layout_height="44dp"
        android:layout_marginTop="24dp"
        android:text="@string/tituloVersao_txt"
        android:textAlignment="center"
        android:textColor="@color/pink"
        android:textSize="34sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.952" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="300dp"
        android:layout_height="193dp"
        app:layout_constraintBottom_toTopOf="@+id/textDev"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textAppDescription"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/logo_channel3" />
</androidx.constraintlayout.widget.ConstraintLayout>